src/test/deca/context/invalid/43_CallType.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 16: ContextualError: Assignment error
// 
// Historique:
//    cree le 01/01/2022

class A {
	void f() {}
}
{
   A a = new A();
   // Doit etre refuse.
   int x = a.f();
}
